--- a/backChina.conf
+++ b/backChina.conf
@@ -2,7 +2,7 @@
 [General]
 loglevel = notify
 bypass-system = true
-skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local
+skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 17.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local
 ipv6 = true
 
 
