--- a/backChina.conf
+++ b/backChina.conf
@@ -7,14 +7,14 @@ ipv6 = true
 
 
 [Proxy]
-SiChuan = custom, 2.3.3.3, 311, chacha20, fsadfg, https://m.win/SSEncrypt.module
-XuZhou = custom, 2.3.3.3, 311, chacha20, fsadfg, https://m.win/SSEncrypt.module
-ZhenJiang = custom, 2.3.3.3, 311, chacha20, fsadfg, https://m.win/SSEncrypt.module
-🇨🇳Taiwan = custom, 2.3.3.3, 311, chacha20, fsadfg, https://m.win/SSEncrypt.module
-🇭🇰HK = custom, 2.3.3.3, 311, chacha20, fsadfg, https://m.win/SSEncrypt.module
-🇸🇬Singapore = custom, 2.3.3.3, 311, chacha20, fsadfg, https://m.win/SSEncrypt.module
-🇺🇸America = custom, 2.3.3.3, 311, chacha20, fsadfg, https://m.win/SSEncrypt.module
-🇯🇵JP = custom, 2.3.3.3, 311, chacha20, fsadfg, https://m.win/SSEncrypt.module
+SiChuan = custom, 2.3.3.3, 311, chacha20, fsadfg, https://github.com/sumsethan/MySurgeRule/blob/master/SSEncrypt.module
+XuZhou = custom, 2.3.3.3, 311, chacha20, fsadfg, https://github.com/sumsethan/MySurgeRule/blob/master/SSEncrypt.module
+ZhenJiang = custom, 2.3.3.3, 311, chacha20, fsadfg, https://github.com/sumsethan/MySurgeRule/blob/master/SSEncrypt.module
+🇨🇳Taiwan = custom, 2.3.3.3, 311, chacha20, fsadfg, https://github.com/sumsethan/MySurgeRule/blob/master/SSEncrypt.module
+🇭🇰HK = custom, 2.3.3.3, 311, chacha20, fsadfg, https://github.com/sumsethan/MySurgeRule/blob/master/SSEncrypt.module
+🇸🇬Singapore = custom, 2.3.3.3, 311, chacha20, fsadfg, https://github.com/sumsethan/MySurgeRule/blob/master/SSEncrypt.module
+🇺🇸America = custom, 2.3.3.3, 311, chacha20, fsadfg, https://github.com/sumsethan/MySurgeRule/blob/master/SSEncrypt.module
+🇯🇵JP = custom, 2.3.3.3, 311, chacha20, fsadfg, https://github.com/sumsethan/MySurgeRule/blob/master/SSEncrypt.module
 Local = DIRECT
 
 [Proxy Group]
