--- a/crosswall.conf
+++ b/crosswall.conf
@@ -18,12 +18,12 @@ test-connectivity = true
 hide-crashlytics-request = true
 
 [Proxy]
-1 = custom, 2.3.3.3, 11111, chacha20, 12345, https://cdn.rid.io/surge/SSEncrypt.module
-2 = custom, 2.3.3.3, 11111, chacha20, 12345, https://cdn.rid.io/surge/SSEncrypt.module
-3 = custom, 2.3.3.3, 11111, chacha20, 12345, https://cdn.rid.io/surge/SSEncrypt.module
-国内1 = custom, 2.3.3.3, 11111, chacha20, 12345, https://cdn.rid.io/surge/SSEncrypt.module
-国内2 = custom, 2.3.3.3, 11111, chacha20, 12345, https://cdn.rid.io/surge/SSEncrypt.module
-frp = custom, 2.3.3.3, 11111, chacha20, 12345, https://cdn.rid.io/surge/SSEncrypt.module
+1 = custom, 2.3.3.3, 11111, chacha20, 12345, https://github.com/sumsethan/MySurgeRule/blob/master/SSEncrypt.module
+2 = custom, 2.3.3.3, 11111, chacha20, 12345, https://github.com/sumsethan/MySurgeRule/blob/master/SSEncrypt.module
+3 = custom, 2.3.3.3, 11111, chacha20, 12345, https://github.com/sumsethan/MySurgeRule/blob/master/SSEncrypt.module
+国内1 = custom, 2.3.3.3, 11111, chacha20, 12345, https://github.com/sumsethan/MySurgeRule/blob/master/SSEncrypt.module
+国内2 = custom, 2.3.3.3, 11111, chacha20, 12345, https://github.com/sumsethan/MySurgeRule/blob/master/SSEncrypt.module
+frp = custom, 2.3.3.3, 11111, chacha20, 12345, https://github.com/sumsethan/MySurgeRule/blob/master/SSEncrypt.module
 
 
 [Proxy Group]
