Update and rename backChina.conf to BacktoChina.conf

--- a/BacktoChina.conf
+++ b/BacktoChina.conf
@@ -1,4 +1,4 @@
-#!MANAGED-CONFIG https://m.win/backChina.conf interval=32400 strict=true
+#!MANAGED-CONFIG https://github.com/sumsethan/MySurgeRule/edit/master/backChina.conf interval=32400 strict=true
 [General]
 loglevel = notify
 bypass-system = true
