--- a/Rules/BacktoChina.conf
+++ b/Rules/BacktoChina.conf
@@ -18,11 +18,13 @@ ZhenJiang = custom, 2.3.3.3, 311, chacha20, fsadfg, https://github.com/sumsethan
 Local = DIRECT
 
 [Proxy Group]
+Location = select, Local, 🇯🇵JP, 🇨🇳China
 Youtube = select, Local, 🇭🇰HK, 🇨🇳Taiwan, 🇺🇸America, 🇯🇵JP
 Netflix = select, Local, 🇸🇬Singapore, 🇨🇳Taiwan, 🇺🇸America, 🇯🇵JP
 🇨🇳China = url-test, SiChuan, XuZhou, ZhenJiang, url = http://www.baidu.com/generate_204, interval = 600, tolerance = 30
-Location = select, Local, 🇯🇵JP, 🇨🇳China
+
 [Rule]
+
 USER-AGENT,NeteaseMusic,🇨🇳China
 USER-AGENT,网易云音乐,🇨🇳China
 DOMAIN-SUFFIX,baidu.com,🇨🇳China
@@ -31,14 +33,16 @@ DOMAIN-SUFFIX,163.com,🇨🇳China
 DOMAIN-KEYWORD,youku,🇨🇳China
 DOMAIN-SUFFIX,ykimg.com,🇨🇳China
 DOMAIN-SUFFIX,irs01.com,🇨🇳China
+#YouTube
+DOMAIN-KEYWORD,googlevideo,Youtube
+DOMAIN-SUFFIX,youtube-nocookie.com,Youtube
+DOMAIN-SUFFIX,youtube.com,Youtube
+#Netflix
 DOMAIN-SUFFIX,nflxext.com,Netflix
 DOMAIN-SUFFIX,netflix.com,Netflix
 DOMAIN-KEYWORD,nflxso,Netflix
 DOMAIN-KEYWORD,nflximg,Netflix
 DOMAIN-KEYWORD,nflxvideo,Netflix
-DOMAIN-KEYWORD,googlevideo,Youtube
-DOMAIN-SUFFIX,youtube-nocookie.com,Youtube
-DOMAIN-SUFFIX,youtube.com,Youtube
 IP-CIDR,66.197.128.0/17,Netflix,no-resolve
 IP-CIDR,64.120.128.0/17,Netflix,no-resolve
 IP-CIDR,45.57.0.0/16,Netflix,no-resolve
@@ -64,11 +68,14 @@ IP-CIDR,54.86.0.0/16,Netflix,no-resolve
 IP-CIDR,52.72.0.0/16,Netflix,no-resolve
 IP-CIDR,52.0.0.0/16,Netflix,no-resolve
 IP-CIDR,54.0.0.0/16,Netflix,no-resolve
+
 IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
+
 GEOIP,CN,🇨🇳China
+GEOIP,JP,Location
 FINAL,Location
 
 [URL Rewrite]
