Changes to be committed: 	modified:   CrossWall.conf

--- a/Rules/CrossWall.conf
+++ b/Rules/CrossWall.conf
@@ -3,7 +3,7 @@ loglevel = notify
 bypass-system = true
 skip-proxy = 10.0.0.0/8, 17.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, e.crashlytics.com, *.epaylinks.cn, captive.apple.com, www.thinkdifferent.us, www.itools.info, www.ibook.info, www.aiport.us, www.appleiphonecell.com,::ffff:0:0:0:0/1, ::ffff:128:0:0:0/1
 ipv6 = true
-dns-server = 172.18.156.166, 172.18.156.31, 8.8.8.8, 8.8.4.4, 9.9.9.9, 114.114.114.114, 223.5.5.5, 119.29.29.29, 101.6.6.6, 2001:da8::666, 240c::666
+dns-server = 172.18.156.166, 172.18.156.31, 8.8.8.8, 8.8.4.4, 9.9.9.9, 114.114.114.114, 223.5.5.5, 119.29.29.29, 101.6.6.6, 2001:da8::666, 240c::666, system
 allow-wifi-access = true
 external-controller-access = password0@0.0.0.0:6170
 interface = 0.0.0.0
@@ -36,44 +36,52 @@ FINAL = select, Proxy, DIRECT
 TEST = select, 1, 2, 3, 国内1, 国内2, Frp
 
 [Rule]
-#Custom
-PROCESS-NAME,BestTrace,DIRECT
-DOMAIN-SUFFIX,ping.pe,TEST
-DOMAIN-SUFFIX,mobileapptracking.com,DIRECT
-DOMAIN-KEYWORD,blizzard,DIRECT
-PROCESS-NAME,heartstone,DIRECT
-DOMAIN-SUFFIX,unity3d.com,DIRECT
-DOMAIN-KEYWORD,battlenet,DIRECT
-DOMAIN-SUFFIX,battle.net,DIRECT
-DOMAIN-SUFFIX,pupudy.com,DIRECT
-DOMAIN-SUFFIX,amazonaws-china.com,DIRECT
-DOMAIN-SUFFIX,amazon.com,DIRECT
-IP-CIDR,192.168.10.1/24,Home,no-resolve
-DOMAIN-SUFFIX,edu.cn,Home
+#CustomReject
+PROCESS-NAME,AdobeGCClient,REJECT
+PROCESS-NAME,Adobe Lightroom,REJECT
+PROCESS-NAME,adobe_licutil,REJECT
+PROCESS-NAME,Install,REJECT
 PROCESS-NAME,PDApp,REJECT
 PROCESS-NAME,SwitchResX,REJECT
 PROCESS-NAME,SmoothScroll,REJECT
+PROCESS-NAME,Core Sync,REJECT
+PROCESS-NAME,Adobe Desktop Service,REJECT
+PROCESS-NAME,Adobe Photoshop CC 2015.5,REJECT
+PROCESS-NAME,Core Sync,REJECT
 DOMAIN,163.177.79.158,REJECT
-DOMAIN,163.177.79.158,REJECT
-PROCESS-NAME,Thunder,DIRECT
+#custom
+PROCESS-NAME,ShadowsocksX-NG,Proxy
+DOMAIN-SUFFIX,googleapis.cn,Proxy,enhanced-mode
+DOMAIN-SUFFIX,ping.pe,TEST
+DOMAIN,speedtest.rixcloud.com,TEST
+PROCESS-NAME,订票助手,CN
 DOMAIN-SUFFIX,ipip.net,CN
-PROCESS-NAME,IINA,CN
 DOMAIN-SUFFIX,macbeats.win,CN
-DOMAIN-SUFFIX,sysu.edu.cn,Home
-PROCESS-NAME,LookupViewService,Proxy
-PROCESS-NAME,Dictionary,Proxy
-DOMAIN-SUFFIX,wikiwand.com,Proxy,force-remote-dns,enhanced-mode
-PROCESS-NAME,*trustd*,Proxy
-DOMAIN-KEYWORD,avtb,Proxy
+PROCESS-NAME,Thunder,DIRECT
 PROCESS-NAME,uTorrent,DIRECT
+PROCESS-NAME,BestTrace,DIRECT
+DOMAIN-KEYWORD,blizzard,DIRECT
+DOMAIN-SUFFIX,pupudy.com,DIRECT
+DOMAIN-SUFFIX,amazon.com,DIRECT
+DOMAIN-KEYWORD,battlenet,DIRECT
+DOMAIN-SUFFIX,battle.net,DIRECT
+PROCESS-NAME,hearthstone,DIRECT
+DOMAIN-SUFFIX,unity3d.com,DIRECT
 DOMAIN-SUFFIX,ourbits.club,DIRECT
+DOMAIN-SUFFIX,amazonaws-china.com,DIRECT
+DOMAIN-SUFFIX,mobileapptracking.com,DIRECT
+DOMAIN,softs.fun,Streaming
 DOMAIN-SUFFIX,tvb.com,Streaming
 DOMAIN-SUFFIX,mytvsuper.com,Streaming
 DOMAIN-SUFFIX,dmm.co.jp,Streaming
+DOMAIN,www.dmm.com,Streaming
 DOMAIN-KEYWORD,abema,Streaming
 USER-AGENT,AbemaTV*,Streaming
 DOMAIN-KEYWORD,abematv,Streaming
-URL-REGEX,http://113.200.76.*:16420\/sxtd.bike2.01\/getkey.do,REJECT
+DOMAIN-KEYWORD,avtb,Streaming
+#frp
+IP-CIDR,192.168.10.1/24,Home,no-resolve
+DOMAIN-SUFFIX,edu.cn,Home
 #ResiloSync
 IP-CIDR,173.244.217.42/32,Proxy,no-resolve
 IP-CIDR,209.95.56.60/32,Proxy,no-resolve
