--- a/Rules/CrossWall.conf
+++ b/Rules/CrossWall.conf
@@ -3,7 +3,7 @@ loglevel = notify
 bypass-system = true
 skip-proxy = 10.0.0.0/8, 17.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, e.crashlytics.com, *.epaylinks.cn, captive.apple.com, www.thinkdifferent.us, www.itools.info, www.ibook.info, www.aiport.us, www.appleiphonecell.com,::ffff:0:0:0:0/1, ::ffff:128:0:0:0/1
 ipv6 = true
-dns-server = 172.18.156.166, 172.18.156.31, 8.8.8.8, 8.8.4.4, 9.9.9.9, 114.114.114.114, 223.5.5.5, 119.29.29.29, 101.6.6.6, 2001:da8::666, 240c::666, system
+dns-server = 172.18.156.166, 172.18.156.31, 9.9.9.9, 223.5.5.5, 119.29.29.29, 101.6.6.6, 2001:da8::666, 240c::666, system
 allow-wifi-access = true
 external-controller-access = password0@0.0.0.0:6170
 interface = 0.0.0.0
@@ -27,7 +27,8 @@ frp = custom, 2.3.3.3, 11111, chacha20, 12345, https://github.com/sumsethan/MySu
 
 
 [Proxy Group]
-Proxy = select, 1, 2, 3
+Proxy = select, Ping, Streaming
+Ping = fallback, 1, 2, 3
 Streaming = select, 1, 2, 3
 Apple = select, Proxy, DIRECT
 Home = ssid, default = DIRECT, cellular = Frp, "H2O" = Frp, "H2O-5G" = Frp
