--- a/Rules/SurgeRecommand.conf
+++ b/Rules/SurgeRecommand.conf
@@ -34,7 +34,8 @@ hide-crashlytics-request = true
 🌐SSR-Proxy = socks5, 127.0.0.1, 1086, , 
 
 [Proxy Group]
-Proxy = select, 🇲🇴深圳-CTM, 🇯🇵北京-Linode, 🇭🇰深圳-WTT, 🇰🇷杭州-KT, 🇸🇬上海-Leaseweb, 🇺🇸杭州-Zenlayer, 🌐SSR-Proxy
+Proxy = select, Ping, Streaming
+Ping = fallback, 🇲🇴深圳-CTM, 🇯🇵北京-Linode, 🇭🇰深圳-WTT, 🇰🇷杭州-KT, 🇸🇬上海-Leaseweb, 🇺🇸杭州-Zenlayer, 🌐SSR-Proxy
 Streaming = select, 🇲🇴深圳-CTM, 🇯🇵北京-Linode, 🇭🇰深圳-WTT, 🇰🇷杭州-KT, 🇸🇬上海-Leaseweb, 🇺🇸杭州-Zenlayer, 🌐SSR-Proxy
 Apple = select, DIRECT, Proxy
 Home = select, DIRECT, Frp
