--- a/Rules/Surfboard.conf
+++ b/Rules/Surfboard.conf
@@ -643,12 +643,12 @@ DOMAIN, m10.music.126.net, DIRECT
 DOMAIN, d7.baidupcs.com, DIRECT
 DOMAIN, ws.cdn.baidupcs.com, DIRECT
 DOMAIN, video.cdn.baidupcs.com, DIRECT
-DOMAIN-KEYWORD, cn-api, DIRECT, force-remote-dns
-DOMAIN-KEYWORD, sbixby.com, DIRECT, force-remote-dns
-DOMAIN-KEYWORD, samsung, DIRECT, force-remote-dns
-DOMAIN, dls.di.atlas.samsung.com, DIRECT, force-remote-dns
-DOMAIN-SUFFIX, samsungfeed.com, DIRECT, force-remote-dns
-DOMAIN-SUFFIX, samsungcloud.com, DIRECT, force-remote-dns
+DOMAIN-KEYWORD, cn-api, DIRECT
+DOMAIN-KEYWORD, sbixby.com, DIRECT
+DOMAIN-KEYWORD, samsung, DIRECT
+DOMAIN, dls.di.atlas.samsung.com, DIRECT
+DOMAIN-SUFFIX, samsungfeed.com, DIRECT
+DOMAIN-SUFFIX, samsungcloud.com, DIRECT
 DOMAIN-SUFFIX, outlook.com, DIRECT
 DOMAIN-KEYWORD, weixin.qq.com, DIRECT
 #frp
