--- a/Rules/Surfboard.conf
+++ b/Rules/Surfboard.conf
@@ -8,7 +8,7 @@ udp-relay = false
 🇭🇰SSL-WTT = https, wtt.b.a, 34443, sumsethan, sumsethan@wtt
 🇭🇰HKT = ss, hkt.b.a, 54443, chacha20, sumsethan@hkt
 🇭🇰SSL-HKT = https, hkt.b.a, 34443, sumsethan, sumsethan@hkt
-
+Home = ss, frp.b.a, 44443, chacha20, sumsethan@frp
 [Proxy Group]
 Proxy = select, 🇭🇰HKT, 🇭🇰WTT, 🇭🇰SSL-HKT, 🇭🇰SSL-WTT
 [Rule]
@@ -637,6 +637,7 @@ DOMAIN-SUFFIX,519397.com,REJECT
 DOMAIN-SUFFIX,twh5.com,REJECT
 
 #############################################
+
 DOMAIN-SUFFIX, miaopai.com, DIRECT
 DOMAIN, v4.music.126.net, DIRECT
 DOMAIN, m10.music.126.net, DIRECT
