modified:   Rules/Surfboard.conf

--- a/Rules/Surfboard.conf
+++ b/Rules/Surfboard.conf
@@ -645,20 +645,20 @@ DOMAIN-SUFFIX,twh5.com,ADblock
 
 #############################################
 
-DOMAIN-SUFFIX, miaopai.com, DIRECT
-DOMAIN, v4.music.126.net, DIRECT
-DOMAIN, m10.music.126.net, DIRECT
-DOMAIN, d7.baidupcs.com, DIRECT
-DOMAIN, ws.cdn.baidupcs.com, DIRECT
-DOMAIN, video.cdn.baidupcs.com, DIRECT
-DOMAIN-KEYWORD, cn-api, DIRECT
-DOMAIN-KEYWORD, sbixby.com, DIRECT
-DOMAIN-KEYWORD, samsung, DIRECT
-DOMAIN, dls.di.atlas.samsung.com, DIRECT
-DOMAIN-SUFFIX, samsungfeed.com, DIRECT
-DOMAIN-SUFFIX, samsungcloud.com, DIRECT
-DOMAIN-SUFFIX, outlook.com, DIRECT
-DOMAIN-KEYWORD, weixin.qq.com, DIRECT
+DOMAIN-SUFFIX, miaopai.com, CN
+DOMAIN, v4.music.126.net, CN
+DOMAIN, m10.music.126.net, CN
+DOMAIN, d7.baidupcs.com, CN
+DOMAIN, ws.cdn.baidupcs.com, CN
+DOMAIN, video.cdn.baidupcs.com, CN
+DOMAIN-KEYWORD, cn-api, CN
+DOMAIN-KEYWORD, sbixby.com, CN
+DOMAIN-KEYWORD, samsung, CN
+DOMAIN, dls.di.atlas.samsung.com, CN
+DOMAIN-SUFFIX, samsungfeed.com, CN
+DOMAIN-SUFFIX, samsungcloud.com, CN
+DOMAIN-SUFFIX, outlook.com, CN
+DOMAIN-KEYWORD, weixin.qq.com, CN
 #frp
 DOMAIN-KEYWORD, 192-168-10-, Home
 IP-CIDR, 192.168.10.1/24, Home, no-resolve
@@ -683,45 +683,45 @@ DOMAIN-SUFFIX, gmail.com, Proxy, force-remote-dns
 DOMAIN-SUFFIX, whatsapp.net, Proxy, force-remote-dns
 DOMAIN-KEYWORD, google, Proxy, force-remote-dns
 # Accelerate top cn sites
-DOMAIN-KEYWORD, alipay, DIRECT
-DOMAIN-KEYWORD, baidu, DIRECT
-DOMAIN-KEYWORD, taobao, DIRECT
-DOMAIN-KEYWORD, sinaimg, DIRECT
-DOMAIN-SUFFIX, 126.net, DIRECT
-DOMAIN-SUFFIX, 163.com, DIRECT
-DOMAIN-SUFFIX, alicdn.com, DIRECT
-DOMAIN-SUFFIX, amap.com, DIRECT
-DOMAIN-SUFFIX, bdimg.com, DIRECT
-DOMAIN-SUFFIX, bdstatic.com, DIRECT
-DOMAIN-SUFFIX, ccgslb.com.cn, DIRECT
-DOMAIN-SUFFIX, cnbeta.com, DIRECT
-DOMAIN-SUFFIX, cnzz.com, DIRECT
-DOMAIN-SUFFIX, douban.com, DIRECT
-DOMAIN-SUFFIX, gtimg.com, DIRECT
-DOMAIN-SUFFIX, hao123.com, DIRECT
-DOMAIN-SUFFIX, haosou.com, DIRECT
-DOMAIN-SUFFIX, ifeng.com, DIRECT
-DOMAIN-SUFFIX, iqiyi.com, DIRECT
-DOMAIN-SUFFIX, jd.com, DIRECT
-DOMAIN-SUFFIX, netease.com, DIRECT
-DOMAIN-SUFFIX, ourdvs.com, DIRECT
-DOMAIN-SUFFIX, qhimg.com, DIRECT
-DOMAIN-SUFFIX, qq.com, DIRECT
-DOMAIN-SUFFIX, sogou.com, DIRECT
-DOMAIN-SUFFIX, sohu.com, DIRECT
-DOMAIN-SUFFIX, soso.com, DIRECT
-DOMAIN-SUFFIX, steamstatic.com, DIRECT
-DOMAIN-SUFFIX, steamcommunity.com, DIRECT
-DOMAIN-SUFFIX, suning.com, DIRECT
-DOMAIN-SUFFIX, tmall.com, DIRECT
-DOMAIN-SUFFIX, tudou.com, DIRECT
-DOMAIN-SUFFIX, weibo.com, DIRECT
-DOMAIN-SUFFIX, youku.com, DIRECT
-DOMAIN-SUFFIX, xunlei.com, DIRECT
-DOMAIN-SUFFIX, zhihu.com, DIRECT
-DOMAIN-SUFFIX, blackssl.com, DIRECT
-DOMAIN-SUFFIX, darkssl.com, DIRECT
-DOMAIN-SUFFIX, polarynetwork.com, DIRECT
+DOMAIN-KEYWORD, alipay, CN
+DOMAIN-KEYWORD, baidu, CN
+DOMAIN-KEYWORD, taobao, CN
+DOMAIN-KEYWORD, sinaimg, CN
+DOMAIN-SUFFIX, 126.net, CN
+DOMAIN-SUFFIX, 163.com, CN
+DOMAIN-SUFFIX, alicdn.com, CN
+DOMAIN-SUFFIX, amap.com, CN
+DOMAIN-SUFFIX, bdimg.com, CN
+DOMAIN-SUFFIX, bdstatic.com, CN
+DOMAIN-SUFFIX, ccgslb.com.cn, CN
+DOMAIN-SUFFIX, cnbeta.com, CN
+DOMAIN-SUFFIX, cnzz.com, CN
+DOMAIN-SUFFIX, douban.com, CN
+DOMAIN-SUFFIX, gtimg.com, CN
+DOMAIN-SUFFIX, hao123.com, CN
+DOMAIN-SUFFIX, haosou.com, CN
+DOMAIN-SUFFIX, ifeng.com, CN
+DOMAIN-SUFFIX, iqiyi.com, CN
+DOMAIN-SUFFIX, jd.com, CN
+DOMAIN-SUFFIX, netease.com, CN
+DOMAIN-SUFFIX, ourdvs.com, CN
+DOMAIN-SUFFIX, qhimg.com, CN
+DOMAIN-SUFFIX, qq.com, CN
+DOMAIN-SUFFIX, sogou.com, CN
+DOMAIN-SUFFIX, sohu.com, CN
+DOMAIN-SUFFIX, soso.com, CN
+DOMAIN-SUFFIX, steamstatic.com, CN
+DOMAIN-SUFFIX, steamcommunity.com, CN
+DOMAIN-SUFFIX, suning.com, CN
+DOMAIN-SUFFIX, tmall.com, CN
+DOMAIN-SUFFIX, tudou.com, CN
+DOMAIN-SUFFIX, weibo.com, CN
+DOMAIN-SUFFIX, youku.com, CN
+DOMAIN-SUFFIX, xunlei.com, CN
+DOMAIN-SUFFIX, zhihu.com, CN
+DOMAIN-SUFFIX, blackssl.com, CN
+DOMAIN-SUFFIX, darkssl.com, CN
+DOMAIN-SUFFIX, polarynetwork.com, CN
 # Top blocked sites
 DOMAIN-SUFFIX, 4sqi.net, Proxy
 DOMAIN-SUFFIX, abpchina.org, Proxy
@@ -908,20 +908,14 @@ IP-CIDR, 10.0.0.0/8, DIRECT
 IP-CIDR, 172.16.0.0/12, DIRECT
 IP-CIDR, 127.0.0.0/8, DIRECT
 DOMAIN-SUFFIX, googleapis.cn, Proxy
-DOMAIN-SUFFIX, cn, DIRECT
-DOMAIN-KEYWORD, -cn, DIRECT
-GEOIP, CN, DIRECT
+DOMAIN-SUFFIX, cn, CN
+DOMAIN-KEYWORD, -cn, CN
+GEOIP, CN, CN
 FINAL, Proxy
 
 [Host]
-hub5btmain.sandai.net = 127.0.0.1
-hub5emu.sandai.net = 127.0.0.1
-upgrade.xl9.xunlei.com = 127.0.0.1
 sci-hub.org = 80.82.77.83
 sci-hub.cc = 80.82.77.84
 sci-hub.bz = 80.82.77.84
 bbs.pcbeta.com = 218.93.127.136
-www.iffmpeg.com = 127.0.0.1
-webcluster110.one.com = 127.0.0.1
-webcluster05.one.com = 127.0.0.1
-webcluster06.one.com = 127.0.0.1
+
