modified:   Rules/Surfboard.conf

--- a/Rules/Surfboard.conf
+++ b/Rules/Surfboard.conf
@@ -12,6 +12,9 @@ udp-relay = true
 🇨🇳联通 = ss, cu.b.a, 54443, chacha20, sumsethan@cu
 🇨🇳移动 = ss, cm.b.a, 54443, chacha20, sumsethan@cm
 Home = ss, frp.b.a, 44443, chacha20, sumsethan@frp
+On = reject
+Off = direct
+DIRECT = direct
 [Proxy Group]
 Proxy = select, Shadowsocks, HTTPoverTLS
 CN = select, DIRECT, 🇨🇳电信, 🇨🇳联通, 🇨🇳移动
